<resources>
    <string name="app_name">task4</string>
    <string name="team_a">Team A</string>
    <string name="_3_points">+3 Points</string>
    <string name="add_three_points">+3 points</string>
    <string name="add_two_points">+2 points</string>
    <string name="add_one_points">free throw</string>
    <string name="team_b">Team B</string>
    <string name="reset">Reset</string>
</resources>